--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">LoadApp</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
+    <string name="no_radio_button_clicked">Please select file to download</string>
 
 
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
@@ -9,6 +10,15 @@
     <string name="notification_button">See changes</string>
 
     <string name="button_name">Click me</string>
-    <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="glide">Glide - Image Loading Library by BumpTech</string>
+    <string name="loadApp">LoadApp - Current repository by Udacity</string>
+    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
+    <string name="message_loading">We are loading </string>
+    <string name="message_download">Download</string>
+    <string name="message_ok">Ok</string>
+    <string name="message_success">Success</string>
+    <string name="message_failure">Fail</string>
+    <string name="cloud">Image of Arrow Pointing Down</string>
+    <string name="radio_buttons">"Radio Buttons Group "</string>
 </resources>
